# wmfocus

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  cast.apng  release.toml
.github/workflows/: ci.yml  publish.yml
src/: args.rs  main.rs  utils.rs  wm_i3.rs  wm_sway.rs
