[package]
name = "wmfocus"
description = "Visually focus windows by label"
version = "1.3.0"
repository = "https://github.com/svenstaro/wmfocus"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["wm", "window", "manager", "i3"]
categories = ["command-line-utilities", "command-line-interface"]
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[features]
i3 = ["i3ipc"]

[dependencies]
cairo-sys-rs = "0.15"
css-color-parser = "0.1"
font-loader = "0.11"
i3ipc = { version = "0.10", optional = true }
itertools = "0.10"
log = "0.4"
pretty_env_logger = "0.4"
regex = "1.5"
clap = { version = "3.0.13", features = ["derive", "wrap_help"] }
xcb = "0.10"
xkbcommon = "0.4"
anyhow = "1"

[dependencies.cairo-rs]
version = "0.15"
features = ["xcb"]

[dependencies.xcb-util]
version = "0.4"
features = ["keysyms"]

[dependencies.x11]
version = "2.19.1"
features = ["xlib"]
