[package]
name = "wmfocus"
description = "Visually focus windows by label"
version = "1.4.0"
repository = "https://github.com/svenstaro/wmfocus"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["wm", "window", "manager", "i3"]
categories = ["command-line-utilities", "command-line-interface"]
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[features]
i3 = ["i3ipc"]

[dependencies]
cairo-rs = { version = "0.18", features = ["xcb"] }
css-color-parser = "0.1"
font-loader = "0.11"
i3ipc = { version = "0.10", optional = true }
itertools = "0.11"
log = "0.4"
pretty_env_logger = "0.5"
regex = "1.8"
clap = { version = "4", features = ["derive", "cargo", "wrap_help", "deprecated"] }
anyhow = "1"
x11rb = { version = "0.12", features = ["allow-unsafe-code"] }
xkeysym = "0.1.0"
